// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disabled prop should not remove tags when Treeselect is disabled 1`] = `
<div
  class="treeselect treeselect--disabled"
  id="test-container"
>
  <div
    class="treeselect-input treeselect-input--bottom treeselect-input--opened"
    tabindex="-1"
  >
    <div
      class="treeselect-input__tags"
    >
      <div
        class="treeselect-input__tags-element"
        tabindex="-1"
        tag-id="1"
        title="Option 1"
      >
        <span
          class="treeselect-input__tags-name"
        >
          Option 1
        </span>
        <span
          class="treeselect-input__tags-cross"
        >
          <svg
            fill="none"
            height="15"
            stroke="#000000"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 25 25"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="18"
              x2="6"
              y1="6"
              y2="18"
            />
            <line
              x1="6"
              x2="18"
              y1="6"
              y2="18"
            />
          </svg>
        </span>
      </div>
      <input
        class="treeselect-input__edit"
        readonly="readonly"
        tabindex="-1"
      />
    </div>
    <div
      class="treeselect-input__operators"
    >
      <span
        class="treeselect-input__clear"
        tabindex="-1"
      >
        <svg
          fill="none"
          height="15"
          stroke="#000000"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 25 25"
          width="15"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <line
            x1="15"
            x2="9"
            y1="9"
            y2="15"
          />
          <line
            x1="9"
            x2="15"
            y1="9"
            y2="15"
          />
        </svg>
      </span>
      <span
        class="treeselect-input__arrow"
      >
        <svg
          fill="none"
          height="15"
          stroke="#000000"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 25 25"
          width="15"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 15l-6-6-6 6"
          />
        </svg>
      </span>
    </div>
  </div>
  <div
    class="treeselect-list treeselect-list--bottom"
    direction="bottom"
  >
    <div
      class="treeselect-list__item treeselect-list__item--checked treeselect-list__item--focused"
      group="false"
      level="0"
      style="padding-left: 5px;"
      tabindex="-1"
      title="Option 1"
    >
      <div
        class="treeselect-list__item-checkbox-container"
      >
        <span
          class="treeselect-list__item-checkbox-icon"
        >
          <svg
            fill="none"
            height="15"
            stroke="#000000"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 25 25"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="20 6 9 17 4 12"
            />
          </svg>
        </span>
        <input
          class="treeselect-list__item-checkbox"
          input-id="1"
          tabindex="-1"
          type="checkbox"
        />
      </div>
      <label
        class="treeselect-list__item-label"
      >
        Option 1
      </label>
    </div>
    <div
      class="treeselect-list__empty treeselect-list__empty--hidden"
      title="No results found..."
    >
      <span
        class="treeselect-list__empty-icon"
      >
        <svg
          fill="none"
          height="15"
          stroke="#000000"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 25 25"
          width="15"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
          />
          <line
            x1="12"
            x2="12"
            y1="9"
            y2="13"
          />
          <line
            x1="12"
            x2="12.01"
            y1="17"
            y2="17"
          />
        </svg>
      </span>
      <span
        class="treeselect-list__empty-text"
      >
        No results found...
      </span>
    </div>
  </div>
</div>
`;

exports[`disabled prop should render a disabled Treeselect 1`] = `
<div
  class="treeselect treeselect--disabled"
  id="test-container"
>
  <div
    class="treeselect-input treeselect-input--value-not-selected"
    tabindex="-1"
  >
    <div
      class="treeselect-input__tags"
    >
      <input
        class="treeselect-input__edit"
        placeholder="Search..."
        readonly="readonly"
        tabindex="-1"
      />
    </div>
    <div
      class="treeselect-input__operators"
    >
      <span
        class="treeselect-input__clear"
        tabindex="-1"
      >
        <svg
          fill="none"
          height="15"
          stroke="#000000"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 25 25"
          width="15"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <line
            x1="15"
            x2="9"
            y1="9"
            y2="15"
          />
          <line
            x1="9"
            x2="15"
            y1="9"
            y2="15"
          />
        </svg>
      </span>
      <span
        class="treeselect-input__arrow"
      >
        <svg
          fill="none"
          height="15"
          stroke="#000000"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 25 25"
          width="15"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 9l6 6 6-6"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;
